<resources>
    <string name="app_name">InGame</string>
    <string name="about">About</string>
    <string name="info">Info</string>
    <string name="requirements">Requirements</string>
    <string name="game_poster">Game Poster</string>
    <string name="recommended">Recommended</string>
    <string name="popular">Popular</string>
    <string name="new_tab">New</string>
    <string name="playstation_5">Playstation 5</string>
    <string name="for_platform">For Platform</string>
    <string name="home">Home</string>
    <string name="catalogue">Catalogue</string>
    <string name="collections">Collections</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="played">Played</string>
    <string name="calendar">Calendar</string>
    <string name="buy_now">Buy Now</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="dots">…</string>
    <string name="snapshots">Snapshots</string>
    <string name="see_all">See all</string>
    <string name="release_date">Release date:</string>
    <string name="platforms">Platforms:</string>
    <string name="directors">Director(s):</string>
    <string name="writer_s">Writer(s)</string>
    <string name="developers">Developers</string>
    <string name="releaseDateTemplates">%1$s %2$s, %3$s</string>
    <string name="game_info_error">Error while receiving game info</string>
    <string name="reqs_error">Error while loading requirements</string>
    <string name="minimum">Minimum</string>
    <string name="unfortunately_we_can_not_show_system_requirements_for_this_game">Unfortunately, we can not show system requirements for this game</string>
    <string name="Recommendations_message">Recommendations will be available for registered users in future updates.</string>
    <string name="logotype">Logotype</string>
    <string name="in_development">In Development</string>
    <string name="nothing_to_show">Nothing to show (</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="add_to_played">Add to Played</string>
    <string name="open_website">Open Website</string>
    <string name="search">Search</string>
</resources>