<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DarkPrimary"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="enterAlways|enterAlwaysCollapsed|scroll"
                app:titleEnabled="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_400sdp"
                        android:contentDescription="@string/game_poster"
                        android:foreground="@drawable/poster_foreground"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sample_poster"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:targetApi="m" />

                    <TextView
                        android:id="@+id/tvGameTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:maxWidth="@dimen/_170sdp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_25ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/tvPlatforms"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tvPlatforms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:alpha="0.5"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/tvGameRating"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tvGameRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:alpha="0.4"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tvGameReleaseYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:alpha="0.4"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
                        app:layout_constraintStart_toEndOf="@+id/tvGameRating" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/game_tablayout_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:tabBackground="@drawable/tab_background"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp"
                app:tabSelectedTextColor="@color/Turquoise"
                app:tabTextAppearance="@style/TabTextAppearance"
                app:tabTextColor="@color/DarkLateGray">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/requirements" />

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.viewpager2.widget.ViewPager2
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>