<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="Minimum"
            type="String" />

        <variable
            name="Recommended"
            type="String" />

        <variable
            name="DataLoaded"
            type="Boolean" />

        <variable
            name="DataIsEmpty"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/circularProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="@{DataLoaded ? View.GONE : View.VISIBLE, default=visible}"
                app:indicatorColor="@color/CornFlowerBlue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{DataLoaded ? View.VISIBLE : View.INVISIBLE, default=invisible}"
                app:constraint_referenced_ids="tvMinimum,tvRecommended,textView9,textView8" />

            <TextView
                android:layout_width="@dimen/_300sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/unfortunately_we_can_not_show_system_requirements_for_this_game"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:visibility="@{DataIsEmpty ? View.VISIBLE : View.GONE, default=gone}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/minimum"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:visibility="@{DataIsEmpty ? View.GONE : View.VISIBLE, default=visible}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMinimum"
                fromHtml="@{Minimum}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:alpha="0.6"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/recommended"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:visibility="@{DataIsEmpty ? View.GONE : View.VISIBLE, default=visible}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMinimum" />

            <TextView
                android:id="@+id/tvRecommended"
                fromHtml="@{Recommended}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:alpha="0.6"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>